fix: content overflow, naming class

--- a/styles/cards.css
+++ b/styles/cards.css
@@ -1,4 +1,4 @@
-.paragraph-cards {
+.caption-cards {
   font-weight: 700;
   font-size: 46px;
   line-height: 100%;
@@ -14,16 +14,22 @@
 }
 .cards__items {
   width: 875px;
+  margin: 0;
+  padding: 0;
 }
 .cards__item {
   display: flex;
 
   max-width: 875px;
-  max-height: 225px;
+  min-height: 225px;
 
   box-sizing: border-box;
   background: #FFFFFF;
   border: 1px solid #DDDDDD;
+  border-bottom: none;
+}
+.cards__item:last-child {
+  border-bottom: 1px solid #DDDDDD;
 }
 .cards__items:nth-last-child(n+2) {
   border-top: none;
@@ -33,12 +39,12 @@
 }
 .cards__item-info {
   width: 535px;
-  max-height: 225px;
+  min-height: 225px;
 
   display: flex;
   flex-direction: column;
-
   box-sizing: border-box;
+
   z-index: 1;
   padding: 30px;
   color: #131313;
@@ -64,6 +70,9 @@
 
   margin-bottom: 15px;
 }
+.cards__item-text:last-child {
+  margin-bottom: 0;
+}
 .cards__item-icon {
   margin-right: 10px;
 }
@@ -71,16 +80,18 @@
   min-width: 340px;
   min-height: 225px;
   width: 330px;
-  height: 225px;
 
   z-index: 2;
   position: relative;
-  box-sizing: border-box;
-  border-right: 10px solid #753BBD;
+  /*border-right: 10px solid #753BBD;*/
 }
 .cards__item-img {
   width: 330px;
-  height: 225px;
+  min-height: 225px;
+  height: 100.5%;
+  border-right: 10px solid #753BBD;
+  position: absolute;
+  top: -1px;
 }
 
 .stick-image {
@@ -88,7 +99,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  max-width: 54px;
+  z-index: 2;
   max-height: 28px;
   padding: 5px 10px;
 }
@@ -113,7 +124,7 @@
 }
 
 @media (max-width: 768px) {
-  .paragraph-cards {
+  .caption-cards {
     text-shadow: none;
     margin: 120px 0 80px;
   }
@@ -130,9 +141,10 @@
     border: none;
   }
   .cards__item-info {
-    width: 340px;
-    height: 165px;
     max-width: 340px;
+
+    width: 100%;
+    height: 165px;
 
     padding: 20px;
     border: 1px solid #DDDDDD;
@@ -158,14 +170,12 @@
   .cards__item-picture {
     min-height: 190px;
     height: 190px;
+    min-width: 330px;
+    width: auto;
   }
   .cards__item-img {
-    height: 190px;
-  }
-
-  .cards__info-wrapper {
-    width: 100%;
-    height: 165px;
+    width: 330px;
+    min-height: 190px;
   }
   .cards__items .cards__item-info:nth-last-child(n+2) {
     border-bottom: 1px solid #DDDDDD;
@@ -176,5 +186,6 @@
   }
   .cards__item-picture--p-disabled {
     border-left: 1px solid #DDDDDD;
+    border-right: 1px solid #DDDDDD;
   }
 }
